# openbsc

debian/: changelog
openbsc/: configure.ac
openbsc/contrib/: mgcp_server.py
openbsc/contrib/testconv/: testconv_main.c
openbsc/include/openbsc/: Makefile.am  gb_proxy.h  gprs_gb_parse.h  gprs_sgsn.h  gsm_data.h  gsm_data_shared.h  gsm_subscriber.h  mgcp_internal.h
openbsc/src/gprs/: gb_proxy.c  gb_proxy_patch.c  gb_proxy_vty.c  gprs_gmm.c  gprs_sndcp.c  sgsn_vty.c
openbsc/src/ipaccess/: ipaccess-config.c
openbsc/src/libbsc/: abis_rsl.c  arfcn_range_encode.c  bsc_init.c  bsc_vty.c  bts_ipaccess_nanobts.c  gsm_subscriber_base.c  system_information.c
openbsc/src/libcommon/: gsm_data.c  gsm_data_shared.c
openbsc/src/libgb/: gprs_ns.c  gprs_ns_frgre.c
openbsc/src/libmgcp/: mgcp_network.c  mgcp_protocol.c  mgcp_transcode.c  mgcp_vty.c  osmux.c
openbsc/src/libmsc/: Makefile.am  db.c  gsm_04_08.c  gsm_04_11.c  gsm_subscriber.c  meas_feed.c  meas_feed.h  osmo_msc.c  smpp_openbsc.c  sms_queue.c  ussd.c  vty_interface_layer3.c
openbsc/src/osmo-bsc/: Makefile.am  osmo_bsc_sccp.c
openbsc/src/osmo-bsc_mgcp/: Makefile.am  mgcp_main.c
openbsc/src/osmo-nitb/: Makefile.am  bsc_hack.c
openbsc/src/utils/: Makefile.am  meas_feed_pcap.c
openbsc/tests/: Makefile.am  ctrl_test_runner.py  vty_test_runner.py
openbsc/tests/channel/: channel_test.c
openbsc/tests/db/: db_test.c
openbsc/tests/gbproxy/: gbproxy_test.c  gbproxy_test.ok
openbsc/tests/gsm0408/: gsm0408_test.c  gsm0408_test.ok
openbsc/tests/mgcp/: mgcp_test.c  mgcp_transcoding_test.c  (+1 more)
(+1 files in other folders)
